--- a/src/main/java/vista/frmInicio.form
+++ b/src/main/java/vista/frmInicio.form
@@ -70,12 +70,12 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnMostrarAlum" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
-                      <Component id="btnIngresarAlum" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="btnMostrarAlum" max="32767" attributes="0"/>
+                      <Component id="btnIngresarAlum" pref="141" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <EmptySpace pref="54" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="btnbuscarAlum" min="-2" pref="131" max="-2" attributes="0"/>
                       <Component id="btnEditarAlum" min="-2" pref="131" max="-2" attributes="0"/>
                   </Group>
@@ -89,12 +89,12 @@
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnIngresarAlum" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnbuscarAlum" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnEditarAlum" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnMostrarAlum" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnEditarAlum" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnbuscarAlum" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
               </Group>
@@ -119,20 +119,6 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JToggleButton" name="btnbuscarAlum">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Buscar Alumno"/>
-            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
-            </Property>
-          </Properties>
-          <AccessibilityProperties>
-            <Property name="AccessibleContext.accessibleName" type="java.lang.String" value=""/>
-          </AccessibilityProperties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
-          </AuxValues>
-        </Component>
         <Component class="javax.swing.JToggleButton" name="btnMostrarAlum">
           <Properties>
             <Property name="text" type="java.lang.String" value="Mostrar Alumnos"/>
@@ -152,7 +138,21 @@
         </Component>
         <Component class="javax.swing.JToggleButton" name="btnEditarAlum">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Eliminar Alumnos"/>
+            <Property name="text" type="java.lang.String" value="Editar Alumno"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Default Cursor"/>
+            </Property>
+          </Properties>
+          <AccessibilityProperties>
+            <Property name="AccessibleContext.accessibleName" type="java.lang.String" value=""/>
+          </AccessibilityProperties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JToggleButton" name="btnbuscarAlum">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Eliminar Alumno"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Default Cursor"/>
             </Property>
